--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,7 +6,7 @@ phases:
       java: latest
   pre_build:
     commands:
-      - export SONAR_TOKEN=$(aws secretsmanager get-secret-value --secret-id secret-name --query SecretString --output text | jq -r .SONAR_TOKEN)
+      - export SONAR_TOKEN=$(aws secretsmanager get-secret-value --secret-id $SONAR_SECRET_NAME --query SecretString --output text | jq -r .SONAR_TOKEN)
   build:
     commands:
       - mvn verify sonar:sonar -Dsonar.projectKey=devsecopsguru -Dsonar.organization=devsecopsguru -Dsonar.host.url=https://sonarcloud.io -Dsonar.token=$SONAR_TOKEN
