--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,9 +6,10 @@ phases:
       java: latest
     commands:
       - echo "Installing dependencies..."
-      - npm install -g snyk
-      - yum install -y wget
-      - yum install -y java-1.8.0-openjdk
+      - npm install -g snyk --unsafe-perm
+      - apt-get update
+      - apt-get install -y wget
+      - apt-get install -y openjdk-8-jdk
       - wget https://github.com/zaproxy/zaproxy/releases/download/v2.11.1/ZAP_2.11.1_Linux.tar.gz
       - mkdir zap
       - tar -xvzf ZAP_2.11.1_Linux.tar.gz -C zap
@@ -26,7 +27,7 @@ phases:
       - echo "Running OWASP ZAP..."
       - zap/zap.sh -daemon -port 8080 &
       - sleep 30  # Allow some time for ZAP to start
-      - zap/zap.sh -cmd -quickurl https://example.com -quickout zap-report.html  
+      - zap/zap.sh -cmd -quickurl https://example.com -quickout zap-report.html  # Replace with your actual URL
   post_build:
     commands:
       - echo "Build, SonarQube analysis, Snyk security scan, and OWASP ZAP report completed."
