--- a/buildspec.yml
+++ b/buildspec.yml
@@ -25,8 +25,10 @@ phases:
       - snyk test
       - echo "Running OWASP ZAP..."
       - zap/zap.sh -daemon -port 8080 &
-      - sleep 30  # Allow some time for ZAP to start
-      - zap/zap.sh -cmd -quickurl https://example.com -quickout zap/zap-report.html  # Ensure report is generated in 'zap' directory
+      - sleep 60  # Allow extra time for ZAP to start
+      - echo "Running ZAP scan..."
+      - zap/zap.sh -cmd -quickurl https://example.com -quickout zap/zap-report.html  # Replace with your actual URL
+      - ls -la zap  # Verify the ZAP report generation
   post_build:
     commands:
       - echo "Verifying ZAP report..."
