--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,7 +9,8 @@ phases:
       - npm install -g snyk --unsafe-perm
       - apt-get update
       - apt-get install -y wget
-      - apt-get install -y docker.io  # Install Docker
+      - apt-get install -y python3-pip
+      - pip3 install zap-cli  # Install zap-cli
   pre_build:
     commands:
       - echo "Authenticating Snyk..."
@@ -21,8 +22,15 @@ phases:
       - mvn verify sonar:sonar -Dsonar.projectKey=devsecopsguru -Dsonar.organization=devsecopsguru -Dsonar.host.url=https://sonarcloud.io -Dsonar.token=$SONAR_TOKEN
       - echo "Running Snyk security scan..."
       - snyk test
-      - echo "Running OWASP ZAP using Docker..."
-      - docker run -v $(pwd)/zap:/zap/wrk -t owasp/zap2docker-stable zap-baseline.py -t https://example.com -r zap-report.html  # Replace with your actual URL
+      - echo "Running OWASP ZAP..."
+      - zap-cli start --start-options '-config api.disablekey=true'
+      - sleep 60  # Allow extra time for ZAP to start
+      - zap-cli status -vv  # Check ZAP status
+      - zap-cli open-url https://example.com  # Replace with your actual URL
+      - zap-cli spider https://example.com  # Replace with your actual URL
+      - zap-cli active-scan https://example.com  # Replace with your actual URL
+      - zap-cli report -o zap/zap-report.html -f html
+      - zap-cli stop
       - echo "ZAP scan completed. Listing zap directory contents..."
       - ls -la zap  # Verify the ZAP report generation
   post_build:
