--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,8 +9,9 @@ phases:
       - npm install -g snyk --unsafe-perm
       - apt-get update
       - apt-get install -y wget
+      - apt-get install -y openjdk-17-jdk
       - apt-get install -y python3-pip
-      - pip3 install zap-cli  # Install zap-cli
+      - pip3 install zapcli
   pre_build:
     commands:
       - echo "Authenticating Snyk..."
@@ -23,21 +24,21 @@ phases:
       - echo "Running Snyk security scan..."
       - snyk test
       - echo "Running OWASP ZAP..."
-      - zap-cli start --start-options '-config api.disablekey=true'
+      - zap-cli start
       - sleep 60  # Allow extra time for ZAP to start
       - zap-cli status -vv  # Check ZAP status
       - zap-cli open-url https://example.com  # Replace with your actual URL
       - zap-cli spider https://example.com  # Replace with your actual URL
       - zap-cli active-scan https://example.com  # Replace with your actual URL
-      - zap-cli report -o zap/zap-report.html -f html
+      - zap-cli report -o zap-report.html -f html
       - zap-cli stop
-      - echo "ZAP scan completed. Listing zap directory contents..."
-      - ls -la zap  # Verify the ZAP report generation
+      - echo "ZAP scan completed. Listing current directory contents..."
+      - ls -la  # Verify the ZAP report generation
   post_build:
     commands:
       - echo "Verifying ZAP report..."
-      - ls -la zap  # List contents of the 'zap' directory to verify the report file
+      - ls -la  # List contents of the current directory to verify the report file
       - echo "Build, SonarQube analysis, Snyk security scan, and OWASP ZAP report completed."
 artifacts:
   files:
-    - zap/zap-report.html
+    - zap-report.html
